# mlops-platform

./: .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  .trivyignore  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-sign-publish.yaml  ci-cd.yaml  ci.yaml  ci.yaml.disabled  deploy.yaml  dr-test.yaml  drift-detection.yaml  infracost.yaml  model-deploy.yaml  release.yaml  reusable-deploy-model.yaml  slsa-provenance.yaml
components/drift-detection/: Dockerfile  README.md  deployment.yaml  drift_detector.py  requirements.txt
components/kserve/: inferenceservice-examples.yaml
components/kserve-transformer/: Dockerfile  requirements.in  requirements.txt  transformer.py
components/mlflow/: deployment.yaml
components/seldon/: seldon-deployment-example.yaml
docs/: QUICKSTART.md  README.md  api-reference.md  architecture.md  demo-script.md  disaster-recovery.md  irsa-access-matrix.md  operational-notes.md  performance-tuning.md  secrets-management.md  slo-definitions.md  troubleshooting.md  upgrade-procedures.md
docs/adr/: 001-kserve-over-seldon.md  002-karpenter-over-cluster-autoscaler.md  003-rawdeployment-mode-kserve.md  004-multi-cloud-infrastructure-strategy.md  005-oidc-authentication-over-static-credentials.md  006-argo-workflows-over-kubeflow-pipelines.md  007-skip-service-mesh.md  008-supply-chain-security.md  009-progressive-delivery.md  010-terraform-over-opentofu.md  011-uv-over-pip.md  012-terragrunt-evaluation.md  013-descope-drift-triggered-retraining.md  014-aws-first-verification.md  015-shared-aws-platform-module.md  016-rawdeployment-canary-and-observability.md  README.md  template.md
docs/evidence/: rollback-demo-analysisrun.yaml  rollback-demo-error-rate-timeline.json
docs/retros/: aws-deploy-retro-2026-07.md
docs/runbooks/: README.md  database-restore.md  karpenter-node-not-provisioning.md  mlflow-connection-issues.md  operations.md  progressive-delivery-runbook.md  teardown.md  terraform-rollback.md  troubleshooting.md
examples/canary-deployment/: README.md  canary-inferenceservice.yaml
examples/chaos-testing/: README.md  cpu-stress.yaml  memory-stress.yaml  network-delay.yaml  network-partition.yaml  pod-failure.yaml
examples/data-versioning/: README.md
examples/distributed-training/: README.md  pytorch-distributed-job.yaml
examples/drift-detection/: README.md  drift-detection-workflow.yaml
examples/iris-classifier/: Dockerfile  README.md  kserve-deployment.yaml  requirements.txt  serve.py  test_inference.py  train.py
examples/kserve/: README.md  champion-inferenceservice.template.yaml  hf-inferenceservice.template.yaml  huggingface-sentiment.yaml  inferenceservice-examples.yaml  transformer-inferenceservice.yaml
examples/llm-inference/: README.md  kserve-vllm.yaml  requirements.txt  test_llm.py
examples/llm-inference/results/: README.md
examples/load-testing/: README.md  k6-load-test.js  locust-load-test.py
infrastructure/argocd/: README.md  platform-baseline.yaml
infrastructure/grafana/dashboards/: data-drift-monitoring.json  model-performance.json
infrastructure/helm/: argocd-values.yaml  mlflow-values.yaml
infrastructure/helm/aws/: argo-workflows-values.yaml  argocd-values-prod.yaml  argocd-values.yaml  grafana-cloud-remote-write-values.yaml  kserve-values.yaml  loki-values.yaml  mlflow-values.yaml  prometheus-stack-values.yaml  tempo-values.yaml
infrastructure/helm/azure/: argo-workflows-values.yaml  (+9 more)
infrastructure/kind/: cluster-config.yaml
infrastructure/kubernetes/: argo-artifact-repository.yaml  argo-memoize-rbac.yaml  drift-retrain-trigger.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policies.yaml  oauth2-proxy.yaml  pod-disruption-budgets.yaml  resource-quotas.yaml  vpa.yaml
infrastructure/local/: kind-config.yaml
infrastructure/terraform/: helm-versions.auto.tfvars
pipelines/: .dockerignore  __init__.py  serving-runtime-contract.yaml
pipelines/feature-store/: README.md  feature_store.yaml  features.py
pipelines/pretrained/: Dockerfile  __init__.py  hf-pretrained-workflow.yaml  requirements.in  requirements.txt
pipelines/retraining/: README.md  automated-retraining-workflow.yaml
pipelines/shared/: __init__.py  exceptions.py  logging_utils.py  mlflow_utils.py
pipelines/training/: Dockerfile  __init__.py  example-pipeline.py  kustomization.yaml  ml-training-workflow.yaml  requirements.in  requirements.txt
scripts/: README.md  deploy-aws.sh  deploy-azure.sh  deploy-gcp.sh  deploy-local.sh  destroy-aws.sh  destroy-azure.sh  destroy-gcp.sh  install.sh  render-slos.sh  rotate-secrets.sh  test-policies.sh
scripts/backup/: verify-backups.sh
scripts/benchmark/: llm_bench.py
scripts/common/: common.sh
scripts/cost-optimization/: cost-report-generator.sh  idle-resource-scanner.py
scripts/demo/: README.md  register-degraded-challenger.py  run-canary-analysis.py
tests/: conftest.py  test_ci_integration.py  test_e2e_deployment.py  test_infrastructure.py  test_iris_classifier.py  test_pipeline_components.py  test_terraform_modules.py
tests/e2e/: __init__.py  kind-config.yaml  minio.yaml  test_argo_workflow.py  test_model_serving.py  test_retraining_workflow.py
tests/integration/: __init__.py  test_pipeline_flow.py  test_transformer_serving.py
tests/property/: test_drift_detector.py  test_feature_engineering.py  test_schema_validation.py
tests/unit/: __init__.py  test_build_serving_model.py  test_drift_detector.py  test_feature_engineering.py  test_feature_store.py  test_fetch_model.py  test_llm_bench.py  test_load_data.py  test_logging_utils.py  test_register_model.py  test_register_pretrained_model.py  test_resolve_serving_uri.py  test_schema.py  test_serving_runtime_contract.py  test_train_model.py  test_transformer.py  test_validate_data.py  test_validate_model.py  test_validate_pretrained_model.py
(+242 files in other folders)
