[project]
name = "mlops-platform"
version = "0.1.0"
description = "Production-ready MLOps platform for model training, versioning, and deployment"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jude Oyovbaire", email = "jude@ratiolabs.dev"}
]
keywords = ["mlops", "kubernetes", "mlflow", "kserve", "kubeflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.10.0",
    "pandera>=0.20.0",
    "transformers>=4.36.0",
    "huggingface_hub>=0.20.0",
    "shap>=0.43.0",
]

[project.optional-dependencies]
drift-detection = [
    "prometheus_client>=0.20.0",
    "scipy>=1.12.0",
]

feast = [
    "feast>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.11.0",
    "mypy>=1.8.0",
    "prometheus_client>=0.20.0",
    "scipy>=1.12.0",
    "hypothesis>=6.100.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests requiring a Kubernetes cluster",
    "network: marks tests requiring network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["pipelines"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

# Exclude files with special import requirements
exclude = [
  "pipelines/training/example-pipeline.py",  # KFP has nested component imports
  "examples/*/test_*.py",                     # Test scripts
]

# Pipeline images run Python 3.10 (pipelines/serving-runtime-contract.yaml).
# Without this, pyupgrade suggests 3.11+ idioms (UP017 datetime.UTC) that
# import-error at runtime in the images - which is exactly how the July
# py3.10 image shipped broken: the dev venv is 3.12, so tests passed while
# every pipeline step died on ImportError.
[tool.ruff.per-file-target-version]
"pipelines/**" = "py310"
"components/**" = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["pipelines"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true